--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,19 @@
 }
 .header-section ul li a {
   font-family: "Poppins", sans-serif;
-  font-style: normal;
   font-weight: normal;
   font-size: 16px;
   line-height: 24px;
   color: #000000;
+}
+.header-section ul li .menu:hover {
+  background-color: #fff;
+  color: #000;
+  border: 1px solid #000000;
+  font-family: "Poppins", sans-serif;
+  font-weight: bold;
+  box-sizing: border-box;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
 }
 .btn-style {
   background: #21b573;
@@ -77,7 +85,6 @@
 /* book section start  */
 .book-img {
   width: 35%;
-
   margin: auto;
 }
 .books-item {
@@ -152,4 +159,59 @@
   line-height: 24px;
   color: #585859;
   margin: 0;
+}
+/* testimonial section start  */
+.testimonial-section h1 {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 36px;
+  line-height: 54px;
+  color: #000000;
+}
+.testimonial-section p {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+  color: #000000;
+}
+.testimonial-img {
+  width: 70%;
+}
+/* footer start  */
+.footer-section {
+  background: #282531;
+  color: #fff;
+  padding-top: 55px;
+  padding-bottom: 27px;
+}
+.footer-section p {
+  font-family: "Poppins", sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 30px;
+}
+.footer-section ul {
+  list-style: none;
+}
+.footer-section ul li h2 {
+  font-family: "Poppins", sans-serif;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 30px;
+  margin: 0;
+}
+.footer-section ul li a {
+  text-decoration: none;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 30px;
+}
+.footer-section ul li a:hover {
+  color: #18a0fb;
 }
