--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,9 +1,9 @@
-@media only screen and (min-width: 992px) and (max-width: 1199px) {
+@media only screen and (min-width: 768px) and (max-width: 1199px) {
   .courses-item i {
-    font-size: 14px;
+    font-size: 12px;
   }
   .courses-item h3 {
-    font-size: 14px;
+    font-size: 12px;
   }
 }
 
@@ -19,5 +19,13 @@
   }
   .banner-item p {
     font-size: 15px;
+  }
+}
+@media only screen and (max-width: 424px) {
+  .courses-item i {
+    font-size: 12px;
+  }
+  .courses-item h3 {
+    font-size: 12px;
   }
 }
