--- a/css/style.css
+++ b/css/style.css
@@ -20,10 +20,10 @@
   background-color: #fff;
   color: #000;
   border: 1px solid #000000;
-  font-family: "Poppins", sans-serif;
   font-weight: bold;
   box-sizing: border-box;
-  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  transition-duration: 0.2s;
 }
 .btn-style {
   background: #21b573;
@@ -93,10 +93,12 @@
   border-radius: 10px;
   padding: 30px 0;
   height: 100%;
+  transition-duration: 0.5s;
 }
 .books-item:hover {
   background: #ffffff;
-  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 20px 40px rgba(0, 0, 0, 0.05);
+  transition-duration: 0.5s;
 }
 .books-item h2 {
   font-family: "Poppins", sans-serif;
@@ -145,8 +147,13 @@
 }
 .courses-item {
   padding: 15px;
-  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.1);
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.05);
   border-radius: 18px;
+  transition-duration: 0.3s;
+}
+.courses-item:hover {
+  box-shadow: 0px 10px 40px rgba(0, 0, 0, 0.08);
+  transition-duration: 0.3s;
 }
 .courses-item i {
   color: #585859;
